Implement "Answer me" endpoint
